--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.call__title, .call__btn {
+  font-family: 'Roboto-Medium';
+  font-weight: 500;
+}
+
 @font-face {
   font-family: 'Roboto-Regular';
   font-weight: 400;
@@ -52,6 +57,20 @@ html {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+}
+
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+button {
+  padding: 0;
+}
+
+p {
+  padding: 0;
 }
 
 body {
@@ -163,15 +182,22 @@ body {
 
 .head {
   background: url("../img/bg-img.jpg") no-repeat center/cover;
-  min-height: 193px;
+}
+
+@media (min-width: 640px) {
+  .head {
+    min-height: 386px;
+  }
 }
 
 .top-slider {
   background: rgba(33, 33, 33, 0.5);
+  min-height: 193px;
 }
 
 .top-slider__item {
   color: #fff;
+  min-height: 193px;
   text-align: center;
 }
 
@@ -181,5 +207,242 @@ body {
   line-height: 28px;
   padding: 36px 0 28px;
   text-transform: uppercase;
+  max-width: 243px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.top-slider__title:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 60px;
+  height: 8px;
+  background: #4a4a4a;
+}
+
+.top-slider__btn {
+  display: none;
+}
+
+.top-slider__text {
+  display: none;
+}
+
+.top-slider .slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+}
+
+.top-slider .slick-dots .slick-active button {
+  background: none;
+  border: 1px solid #476E4D;
+}
+
+.top-slider .slick-dots button {
+  font-size: 0;
+  border: none;
+  background: #2B4074;
+  padding: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+@media (min-width: 640px) {
+  .top-slider__item {
+    min-height: 386px;
+  }
+  .top-slider__title {
+    font-size: 60px;
+    line-height: 60px;
+    max-width: 522px;
+    padding: 50px 0 15px;
+    margin: 0 auto 30px;
+  }
+  .top-slider__btn {
+    display: block;
+    margin: 0 auto 113px;
+    font-weight: 500;
+    font-size: 18px;
+    background-color: #2B4074;
+    color: #F9F6E5;
+    text-transform: uppercase;
+    padding: 16px 45px;
+    border: none;
+    border-radius: 3px;
+  }
+  .top-slider .slick-dots {
+    bottom: 50px;
+  }
+  .top-slider .slick-arrow {
+    position: absolute;
+    right: 0;
+    width: 56px;
+    height: 56px;
+    border: none;
+    z-index: 3;
+  }
+  .top-slider .slick-prev {
+    background-color: #2B4074;
+    top: calc(50% - 56px);
+  }
+  .top-slider .slick-next {
+    background-color: #F9F6E5;
+    bottom: calc(50% - 56px);
+  }
+}
+
+@media (min-width: 768px) {
+  .top-slider__item {
+    min-height: 465px;
+  }
+  .top-slider__title {
+    padding: 87px 0 0;
+    margin: 0 auto 0;
+  }
+  .top-slider__title::after {
+    display: none;
+  }
+  .top-slider__text {
+    display: block;
+    font-family: 'RobotoCondensed-Regular';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    padding: 25px 0 32px;
+    margin: 0 auto;
+    max-width: 580px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .top-slider__item {
+    min-height: 618px;
+  }
+  .top-slider__title {
+    padding-top: 101px;
+    font-size: 84px;
+    line-height: 84px;
+    letter-spacing: 2px;
+    max-width: 750px;
+  }
+  .top-slider .slick-dots {
+    bottom: 80;
+  }
+}
+
+@media (min-width: 1440px) {
+  .top-slider__item {
+    min-height: 668px;
+  }
+  .top-slider__title {
+    padding-top: 107px;
+    font-size: 96px;
+    line-height: 96px;
+    max-width: 865px;
+  }
+  .top-slider__text {
+    font-size: 24px;
+    line-height: 26px;
+    max-width: 886px;
+  }
+  .top-slider .slick-dots button {
+    background: #FFFFFF;
+    border: 1px solid #FFFFFF;
+  }
+  .top-slider .slick-dots .slick-active button {
+    background: none;
+    border: 1px solid #FFFFFF;
+  }
+  .top-slider .slick-arrow {
+    width: 70px;
+    height: 70px;
+  }
+  .top-slider .slick-prev {
+    top: calc(50% - 70px);
+  }
+  .top-slider .slick-next {
+    bottom: calc(50% - 70px);
+  }
+}
+
+.call {
+  background-color: #2B4074;
+  padding: 40px 0;
+  color: #fff;
+  text-align: center;
+}
+
+.call__title {
+  font-family: 'Roboto-Medium';
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 15px;
+  font-weight: 500;
+}
+
+.call__text {
+  margin-bottom: 40px;
+}
+
+.call__btn {
+  background: #F9F6E5;
+  padding: 16px 15px;
+  border: none;
+  border-radius: 3px;
+  color: #2B4074;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .call {
+    text-align: left;
+  }
+  .call__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .call__box {
+    max-width: 427px;
+  }
+  .call__text {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .call__box {
+    max-width: 695px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .call__inner {
+    padding: 0 80px;
+  }
+  .call__box {
+    max-width: 796px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
