--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,17 @@ html{
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
 }
-
+ul,li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+button {
+  padding: 0;
+}
+p {
+  padding: 0;
+}
 
 body {
   min-width: 320px;
@@ -109,18 +119,258 @@ body {
 
 .head {
   background: url('../img/bg-img.jpg') no-repeat center / cover;
-  min-height: 193px;
+}
+@media (min-width: 640px) {
+  .head {
+    min-height: 386px;
+  }
 }
 .top-slider{
   background: rgba(33, 33, 33, 0.5);
+  min-height: 193px;
   &__item{
     color: #fff;
-    text-align: center;}
+    min-height: 193px;
+    text-align: center;
+  }
   &__title{
     font-family: 'RobotoCondensed-Regular';
     font-size: 28px;
     line-height: 28px;
     padding: 36px 0 28px;
     text-transform: uppercase;
+    max-width: 243px;
+    margin: 0 auto;
+    position: relative;
+    &:after{
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 60px;
+      height: 8px;
+      background: $text-color;
+    }
+  }
+  &__btn {
+    display: none;
+  }
+  &__text {
+    display: none;
+  }
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    .slick-active {
+      button {
+        background: none;
+        border: 1px solid #476E4D;
+      }
+    }
+    button{
+      font-size: 0;
+      border: none;
+      background: $accent;
+      padding: 0;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-left: 10px;
+    }
+  }
+}
+@media (min-width: 640px) {
+  .top-slider {
+    &__item {
+      min-height: 386px;
+    }
+    &__title {
+      font-size: 60px;
+      line-height: 60px;
+      max-width: 522px;
+      padding: 50px 0 15px;
+      margin: 0 auto 30px;
+    }
+    &__btn {
+      display: block;
+      margin:0 auto 113px;
+      font-weight: 500;
+      font-size: 18px;
+      background-color: $accent;
+      color: $bg-color;
+      text-transform: uppercase;
+      padding: 16px 45px;
+      border: none;
+      border-radius: 3px;
+    }
+    .slick-dots {
+      bottom: 50px;
+    }
+    .slick-arrow{
+      position: absolute;
+      right: 0;
+      width: 56px;
+      height: 56px;
+      border: none;
+      z-index: 3;
+    }
+    .slick-prev{
+      background-color: $accent;
+      top: calc(50% - 56px);
+    }
+    .slick-next{
+      background-color: $bg-color;
+      bottom: calc(50% - 56px);
+    }
+}
+}
+
+@media (min-width: 768px) {
+  .top-slider {
+    &__item {
+      min-height: 465px;
+    }
+    &__title{
+      padding: 87px 0 0;
+      margin: 0 auto 0;
+      &::after{
+        display: none;
+      }}
+    &__text{
+      display: block;
+      font-family: 'RobotoCondensed-Regular';
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 20px;
+      padding: 25px 0 32px;
+      margin: 0 auto;
+      max-width: 580px;
+    }
+  }
+}
+@media (min-width: 1024px) {
+  .top-slider{
+    &__item{
+      min-height: 618px;
+    }
+    &__title{
+      padding-top: 101px;
+      font-size: 84px;
+      line-height: 84px;
+      letter-spacing: 2px;
+      max-width: 750px;
+    }
+    .slick-dots{
+      bottom: 80;
+    }
+  }
+}
+@media (min-width: 1440px) {
+  .top-slider{
+    &__item{
+      min-height: 668px;
+    }
+    &__title{
+      padding-top: 107px;
+      font-size: 96px;
+      line-height: 96px;
+      max-width: 865px;
+    }
+    &__text{
+      font-size: 24px;
+      line-height: 26px;
+      max-width: 886px;
+    }
+    .slick-dots {
+      button {
+       background: #FFFFFF;
+        border: 1px solid #FFFFFF;
+      }
+      .slick-active{
+        button {
+          background: none;
+           border: 1px solid #FFFFFF;
+         }
+      }
+    }
+    .slick-arrow{
+      width: 70px;
+      height: 70px;
+    }
+    .slick-prev{
+      top: calc(50% - 70px);
+    }
+    .slick-next{
+      bottom: calc(50% - 70px);
+    }
+  }
+}
+
+.call{
+  background-color: $accent;
+  padding: 40px 0;
+  color: #fff;
+  text-align: center;
+  &__title{
+    @extend %roboto-500;
+    font-family: 'Roboto-Medium';
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 15px;
+    font-weight: 500;
+  }
+  &__text{
+    margin-bottom: 40px;
+  }
+  &__btn{
+    background: $bg-color;
+    padding: 16px 15px;
+    border: none;
+    border-radius: 3px;
+    color: $accent;
+    font-size: 18px;
+    @extend %roboto-500;
+    text-transform: uppercase;
+  }
+}
+
+@media (min-width: 768px){
+  .call{
+    text-align: left;
+    &__inner{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &__box{
+      max-width: 427px;
+    }
+    &__text{
+      margin-bottom: 0;
+    }
+  }
+}
+@media (min-width: 1024px){
+  .call{
+    &__box{
+      max-width: 695px;
+    }
+  }
+}
+
+@media (min-width: 1440px){
+  .call{
+    &__inner{
+      padding: 0 80px;
+    }
+    &__box{
+      max-width: 796px;
+    }
   }
 }
